Se han creado la logica para las peticiones para Categoria Hay que averiguar porque me devuelve {} aunque haya contenido en la tabla de categorias! Cuando se elimina una categoria, devuelve un Unknown response type! HAY QUE RESOLVERLO!!!!!
